static/css/index.css
*{
	margin: 0;
	padding: 0;
	transition: 0.2s;
}

body {
	background-color: #f5f5f5;
	font-family: 'Poppins', sans-serif;
}

.navbar{
	background-color: #2D3142;
	height: 70px;
	width: 100%;
	display: flex;
  	justify-content: center;
  	align-items: center;
}
.navbar-links {
	text-decoration: none;
	color: white;
	font-weight: regular;
	position: relative;
	margin:8%;

	

}
.navbar-links:hover{
	opacity: 0.8
	/* filter: brightness(1.15); */
}

.new-listing-btn{
	background-color: #EF8354;
	color: white;
	width: 130px;
	height: 35px;
	padding: 5px;
	display: flex;
	align-items: center;
	justify-content: center; 
	border-radius: 10px;	
	cursor: pointer;
	position: absolute;
	right: 10%;

}
.new-listing-btn:hover {
	background-color: #f09a75;
	/* filter: brightness(1.15); */
}

.new-listing-btn span {
	margin-left: 5px;
}

#pfp {
	position: absolute;
	right: 5%;
	cursor: pointer;
	transition: 0.3s;
	width: 44px;
	height: 44px;
	border-radius: 22px;
	object-fit: cover;
}
#pfp:hover {
	opacity:0.8;
}


.search-bar{
	width: 40%;
	height: 50px;
	background-color: #4F5D75;
	margin: auto;
	position: relative;
	top: 30px;
	border-radius: 20px;
	box-shadow: 0px 3px 10px -1px rgba(0,0,0,0.25);
	-webkit-box-shadow: 0px 3px 10px -1px rgba(0,0,0,0.25);
	-moz-box-shadow: 0px 3px 10px -1px rgba(0,0,0,0.25);

}
.search-bar input {
	width: 90%;
    margin-left: 14px;
    background-color: #4C5970;
    outline: none;
    border: none;
    font-size: 21px;
    color: white;
}
	
	

.search-bar input::placeholder{
	color: white;
	opacity: 0.71;
	font-weight: regular;
	font-family: "Poppins", sans-serif;
}


.search-bar #search-btn{
	background-color: #EF8354;
	width: 55px;
	height: 40px;
	display: flex;
	align-items: center;
	justify-content: center;
	box-shadow: 0px 3px 4px -1px rgba(0,0,0,0.25);
	-webkit-box-shadow: 0px 3px 4px -1px rgba(0,0,0,0.25);
	-moz-box-shadow: 0px 3px 4px -1px rgba(0,0,0,0.25);
	border-radius: 14px;
	color: white;
	font-size: 23px;
	cursor: pointer;
	position:absolute;
	top: 5px;
	right: 5px;

}
.search-bar #search-btn:hover{
	background-color: #f09a75;
	color: #
}


.component-selection{
	width: 100%;
	height: 80%;
	position: absolute;
	bottom: 0px;
}
.component-selection p{
	font-weight: regular;
	font-size:25px;
	position: relative;
	top: 10px;
	text-align: center;
	

}


#component-list{
	display: grid;
    width: 50%;
    margin: auto;
    margin-top: 100px;
    grid-template-columns: auto auto;
    gap: 30px;


}

.component {
	background-color: white;
	width: 100%;
	min-width: 203px;
	height: 20px;
	padding-top: 20px;
	padding-bottom: 20px;
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 30px;
	border-radius: 10px;
	box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.15);
	-webkit-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.15);
	-moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.15);
	cursor: pointer;
}
.component span{ 
	position: absolute;
}
.component:hover{
	/* background-color: rgb(219, 219, 219); */

	background-color: rgb(236, 236, 236);

	transform: scale(1.1)
}

.component .icon {
	width: 30px;
	height:30px;
	border-radius: 11px;
	background-color: red;
	margin-right: auto;
	margin-left: 13px;
}


.item{
	width: fit-content;
	height:fit-content;
	background-color:white;
	padding: 13px;
	box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	-webkit-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	-moz-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	border-radius: 10%;
}
.item img{
	height: 150px;
	border-radius: 7%;
}
.item #price{
	color: #EF8354;
}
.item:hover{
	cursor: pointer;
	transform: scale(1.1);
	opacity: 0.9
}


#search-results-grid{
	display: grid;
	grid-template-columns: auto auto auto auto;
	gap: 20px;
	width: 70%;
	height: 80%;
	place-items: center;
	margin: auto
}


#user-opts {
    width: 200px;
    height: 285px;
    background-color: white;
    position: absolute;
    top: 7%;
    right: 0.6%;
    border-radius: 12px;
    box-shadow: 0 0 9px 0px #00000040;
    z-index: 10000;
    animation: user-opts-animation 0.2s;
}


#user-opts .options{
    width: 200px;
    height: 40px;
    position: relative;
    top: -7%;
    margin: auto;
    margin-top: 48px;
    font-size: 22px;
    text-align: center;
    cursor: pointer;
    border-radius: 10px;
}
#user-opts .options:hover{
	/* background-color: #4f5d751c; */
	opacity: 0.6;
}

 
#user-opts .options i {
    color: #EF8354;
    position: absolute;
    left: 18px;
    top: 6px;
}


#user-name {
    font-weight: 300;
    width: 200px;
    height: 40px;
    position: absolute;
    top: 72%;
    margin: auto;
    margin-top: 48px;
    font-size: 17px;
    text-align: center;
    color: #4f5d75;
}


#search-res {
    /* width: 100vw; */
    width: 90vw;
    height: 77vh;
    position: absolute;
    top: 238px;
    bottom: 27px;
    display:grid;
    padding-left: 30px;
    padding-right: 30px;
    grid-template-columns: auto auto auto auto;
    justify-content: center;
    /* gap: 20px; */


}
#search-res > *:not(:last-child) {
    display: block;
    margin-right: 100px; 
} 
/* #search-res > * {
	margin-left: 20px;
}
#search-res > *:first-child {
	margin-left: 0;
} */

.item-listing {
	width: fit-content;
	height:fit-content;
	max-width: 250px;
	min-width: 229px;
	max-height: 300px;
	background-color:white;
	padding: 13px;
	box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	-webkit-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	-moz-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
	border-radius: 10%;
	overflow: clip;
	cursor: pointer;
}
.item-listing img {
	height: 176px;
	border-radius: 20px;
	position: relative;
	left: 50%;
	transform: translateX(-50%);
}

.item-listing h3 {
	font-weight: 500;
	font-size: 23px;
	text-align: center;
}

.item-listing p { /*price*/
	font-weight: 600;
	font-size: 23px;
	text-align: center;
	/* color: #EF8354; */
	color: white;
	/* background: #00a00d; */
	background: #EF8354;
	padding: 1px;
	border-radius: 10px;
	width: fit-content;
	margin: auto;
	padding: 0 10px 0 10px;
}
.item-listing:hover {
	transform: scale(1.03);
	opacity: 0.9;
}

.fa-heart,.fa-trash-alt {
font-size: 24px;
    color: #eb5b5b;
    position: relative;
    top: 0px;
    right: -213px;
    transition: 0.2s;
}

.fa-heart:hover, .fa-trash-alt:hover {
	opacity: 0.8;
	transform: scale(1.02);
}


.fa-arrow-left {
	    color: #4c5970;
    margin-right: 14px;
    cursor: pointer;
    transition: 0.2s;
}
.fa-arrow-left:hover{
	opacity: 0.8
}



@keyframes user-opts-animation {
	from { transform: scale(0.4);opacity: 0.4}
	to { transform: scale(1); opacity: 1; }
}

#logo {
	    width: 85px;
    margin-left: -220px;
    margin-right: 50px;
    cursor: pointer;
}



@media  only screen and (max-width: 570px) {
	.component{
		font-size: 20px
	}
}
@media  only screen and (max-width: 570px) {
	.component{
		font-size: 14px
	}

	.component-selection p{
		font-size: 15px;
	}
}

@media  only screen and (max-width: 590px) {
	.search-bar{
		width: 80%;
	}
}
@media  only screen and (max-width: 1000px) {
	.navbar *:not(.fa-bars) {
		display: none;
	}

	.navbar i{
		display: block !important;
	}
}


.navbar .fa-bars{
font-size: 38px;
    color: white;
    position: relative;
    right: -42%;
}

#mobile-nav {
	display: none;
    width: 40%;
    height: 80%;
    background: #2d3142;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000000000;  
    width: 90%;
    border-radius: 21px;
    transition: 0s !important;

}


#mobile-nav .navbar-links {
	position: relative;
    left: 37%;
    top: 10%;
    font-size: 24px;
}


#mobile-nav .new-listing-btn {
	    position: relative;
    top: 80px;
    margin: auto;
    left: 8px;
}

#mobile-nav #pfp {
	position: relative;
	top: 120px;
    left: 48%;
}



#welcome-div {
	width: fit-content;
	height: fit-content;
    background: #ed692f;
    padding: 30px;
    position: fixed;
    bottom: 108px;
    border-top-right-radius: 20px;
    color: white;
    border-bottom-right-radius: 20px;
    box-shadow: 0 10px 20px #3282b8, 0 0 0 10px #2d3142;
    z-index: 999;
    animation: welcome-div-anim 0.7s ease-in;
}

#welcome-div h3 {
	font-size: 22px;
	font-weight: 500;
}


#welcome-div button {
	padding: 15px;
    font-size: 20px;
    width: 130px;
    margin-top: 20px;
    border: none;
    background: #2d3142;
    color: #ffffff;
    font-family: 'Poppins';
    border-radius: 16px;
    box-shadow: 0 0 13px 0px #2d3142;
    margin-right: 10px;
    cursor: pointer;
}

#welcome-div button:hover {
	box-shadow: 0 0 20px 0px #2d3142;
	transform: scale(1.03)
}
#welcome-div button:nth-child(4){
	background: rgb(76, 89, 112);
    /* box-shadow: 0px 0px 20px rgb(76 89 112); */
    font-size: 21px;
    height: 61px;
    padding: 0;
    margin-left: 58px;
}

@keyframes welcome-div-anim {
		from { 
			left: -960px;
		}
		to{ 
			left: 0
		}
}


#latest-listings-container {
	z-index: 999;
}
#latest-listings-hr {
	    margin-top: 722px;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    border: 2px solid #C4C4C4;
    background: #C4C4C4;
    border-radius: 24px;
	z-index: 999;
}


#latest-listings-heading {
	    font-size: 40px;
    font-weight: 500;
    margin-left: 60px;
    margin-top: 35px;
	z-index: 999;
}


#latest-listings-res {
	display: grid;
	grid-template-columns: auto auto auto auto;
	gap: 20px;
	width: 70%;
	height: 80%;
	place-items: center;
	margin: auto
}
/* #latest-listings-res > *:not(:last-child) {
    display: block;
    margin-right: 100px; 
} */


@media  only screen and (max-width: 1200px) {
	#component-list {
		grid-template-columns: auto;
	}

	#latest-listings-hr {
		margin-top: 972px;

	}
}

 
@media only screen and (max-width:1600px){
	#search-res,#latest-listings-res {
		grid-template-columns: auto auto auto;
		gap: 20px;
	}
}
@media only screen and (max-width:1400px){
	#search-res, #latest-listings-res {
		grid-template-columns: auto auto ;
		gap: 20px;
	}
}
@media only screen and (max-width:800px){
	#search-res, #latest-listings-res{
		grid-template-columns: auto;
		gap: 20px;
	}
}

